# Clion_MAX7219_STM32F429

./: .cproject_copy  .gitignore  .mxproject  .project  CMakeLists.txt  Clion_MAX_test.ioc  Makefile  README.md  StartupJLink.bat  mx.scratch  openocd.cfg  openocd.sh  run.jdebug  setup_gdbinit.bat
App/: MAX7219.cpp  MAX7219.h  MAX7219_MatrixDisplay.cpp  MAX7219_MatrixDisplay.h  MAX7219_Pin.h  MAX7219_Register.h
Inc/: dma.h  example.h  main.h  spi.h  stm32f4xx_it.h
RTT/: SEGGER_RTT.h  SEGGER_RTT_Conf.h
Src/: dma.c  example.cpp  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c
build-debug/: CMakeCache.txt  Clion_MAX_test.cbp  Clion_MAX_test.elf  Clion_MAX_test.hex  Clion_MAX_test.map  Makefile  cmake_install.cmake
